corpus/addto-statement-without-heritage.txt
================================
addto-statement without heritage
================================

template T {
    class A {
        i = 0; 
    }
}

package P {
    inst T;
    addto A {
        j = 0;
    }
}

---
(program
    (template_declaration
        name: (identifier)
        body: (package_template_body
                (class_declaration
                    name: (type_identifier)
                    body: (class_body
                            (public_field_definition
                                name: (property_identifier)
                                value: (number))))))
    (package_declaration
        name: (identifier)
        body: (package_template_body
                (inst_statement
                    template_name: (identifier))
                (addto_statement
                    name: (type_identifier)
                    body: (class_body
                            (public_field_definition 
                                name: (property_identifier)
                                value: (number)))))))
